fixed navbar z-index

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -40,7 +40,7 @@ nav {
   align-items: center;
   margin: 0;
   padding: 0;
-  z-index: 2;
+  z-index: 10;
 }
 
 #nav-list li {
